fix spanner repository sample