@@ -23,7 +23,6 @@ import java.util.Arrays;
 import java.util.List;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
@@ -35,39 +34,59 @@ import org.springframework.data.domain.PageRequest;
 public class SpannerRepositoryExample {
   private static final Log LOGGER = LogFactory.getLog(SpannerRepositoryExample.class);
 
-  @Autowired private TraderRepository traderRepository;
+  private final TraderRepository traderRepository;
 
-  @Autowired private TradeRepository tradeRepository;
+  private final TradeRepository tradeRepository;
 
-  @Autowired private SpannerSchemaUtils spannerSchemaUtils;
+  private final SpannerSchemaUtils spannerSchemaUtils;
 
-  @Autowired private SpannerDatabaseAdminTemplate spannerDatabaseAdminTemplate;
+  private final SpannerDatabaseAdminTemplate spannerDatabaseAdminTemplate;
+
+  private static final String DEMO_TRADER_1 = "demo_trader1";
+
+  private static final String DEMO_TRADER_2 = "demo_trader2";
+
+  private static final String DEMO_TRADER_3 = "demo_trader3";
+
+  private static final String STOCK_1 = "STOCK1";
+
+  private static final String STOCK_2 = "STOCK2";
+
+  public SpannerRepositoryExample(TraderRepository traderRepository,
+      TradeRepository tradeRepository,
+      SpannerSchemaUtils spannerSchemaUtils,
+      SpannerDatabaseAdminTemplate spannerDatabaseAdminTemplate) {
+    this.traderRepository = traderRepository;
+    this.tradeRepository = tradeRepository;
+    this.spannerSchemaUtils = spannerSchemaUtils;
+    this.spannerDatabaseAdminTemplate = spannerDatabaseAdminTemplate;
+  }
 
   public void runExample() {
     createTablesIfNotExists();
     this.traderRepository.deleteAll();
     this.tradeRepository.deleteAll();
 
-    this.traderRepository.save(new Trader("demo_trader1", "John", "Doe"));
-    this.traderRepository.save(new Trader("demo_trader2", "Mary", "Jane"));
-    this.traderRepository.save(new Trader("demo_trader3", "Scott", "Smith"));
+    this.traderRepository.save(new Trader(DEMO_TRADER_1, "John", "Doe"));
+    this.traderRepository.save(new Trader(DEMO_TRADER_2, "Mary", "Jane"));
+    this.traderRepository.save(new Trader(DEMO_TRADER_3, "Scott", "Smith"));
 
     this.tradeRepository.save(
-        new Trade("1", "BUY", 100.0, 50.0, "STOCK1", "demo_trader1", Arrays.asList(99.0, 101.00)));
+        new Trade("1", "BUY", 100.0, 50.0, STOCK_1, DEMO_TRADER_1, Arrays.asList(99.0, 101.00)));
     this.tradeRepository.save(
-        new Trade("2", "BUY", 105.0, 60.0, "STOCK2", "demo_trader1", Arrays.asList(99.0, 101.00)));
+        new Trade("2", "BUY", 105.0, 60.0, STOCK_2, DEMO_TRADER_1, Arrays.asList(99.0, 101.00)));
     this.tradeRepository.save(
-        new Trade("3", "BUY", 100.0, 50.0, "STOCK1", "demo_trader1", Arrays.asList(99.0, 101.00)));
+        new Trade("3", "BUY", 100.0, 50.0, STOCK_1, DEMO_TRADER_1, Arrays.asList(99.0, 101.00)));
     this.tradeRepository.save(
-        new Trade("1", "BUY", 100.0, 70.0, "STOCK2", "demo_trader2", Arrays.asList(99.0, 101.00)));
+        new Trade("1", "BUY", 100.0, 70.0, STOCK_2, DEMO_TRADER_2, Arrays.asList(99.0, 101.00)));
     this.tradeRepository.save(
-        new Trade("2", "BUY", 103.0, 50.0, "STOCK1", "demo_trader2", Arrays.asList(99.0, 101.00)));
+        new Trade("2", "BUY", 103.0, 50.0, STOCK_1, DEMO_TRADER_2, Arrays.asList(99.0, 101.00)));
     this.tradeRepository.save(
-        new Trade("3", "SELL", 100.0, 52.0, "STOCK2", "demo_trader2", Arrays.asList(99.0, 101.00)));
+        new Trade("3", "SELL", 100.0, 52.0, STOCK_2, DEMO_TRADER_2, Arrays.asList(99.0, 101.00)));
     this.tradeRepository.save(
-        new Trade("1", "SELL", 98.0, 50.0, "STOCK1", "demo_trader3", Arrays.asList(99.0, 101.00)));
+        new Trade("1", "SELL", 98.0, 50.0, STOCK_1, DEMO_TRADER_3, Arrays.asList(99.0, 101.00)));
     this.tradeRepository.save(
-        new Trade("2", "SELL", 110.0, 50.0, "STOCK2", "demo_trader3", Arrays.asList(99.0, 101.00)));
+        new Trade("2", "SELL", 110.0, 50.0, STOCK_2, DEMO_TRADER_3, Arrays.asList(99.0, 101.00)));
 
     LOGGER.info(
         "The table for trades has been cleared and "
@@ -84,7 +103,7 @@ public class SpannerRepositoryExample {
     LOGGER.info("Make a pageable query:");
     List<Trade> tradesPageOne = this.tradeRepository.findByActionAndSymbol(PageRequest.of(0, 1),
         "BUY",
-        "STOCK1"
+        STOCK_1
         );
     for (Trade t : tradesPageOne) {
       LOGGER.info(t);
@@ -105,10 +124,11 @@ public class SpannerRepositoryExample {
     LOGGER.info(this.tradeRepository.getAnyOneTrade());
 
     LOGGER.info("A query method can also select properties in entities:");
-    this.tradeRepository.getTradeIds("BUY").stream().forEach(x -> LOGGER.info(x));
+    this.tradeRepository.getTradeIds("BUY").forEach(LOGGER::info);
 
     LOGGER.info("Lazy-loading collection of trades for 'demo_trader1':");
-    LOGGER.info(this.traderRepository.findById("demo_trader1").get().getTrades());
+    this.traderRepository.findById(DEMO_TRADER_1)
+        .ifPresent(trader -> LOGGER.info(trader.getTrades()));
 
     LOGGER.info("Try http://localhost:8080/trades in the browser to see all trades.");
 
@@ -133,17 +153,14 @@ public class SpannerRepositoryExample {
     this.traderRepository.save(trader3);
     this.traderRepository.save(trader4);
 
-    LOGGER.info(
-        "Find trader by Id and print out JSON field 'workAddress' as string: "
-            + this.traderRepository.findById("demo_trader_json1").get().getWorkAddress());
+    this.traderRepository.findById("demo_trader_json1")
+        .ifPresent(trader -> LOGGER.info(String.format("Find trader by Id and print out JSON field 'workAddress' as string: %s", trader.getWorkAddress())));
 
-    LOGGER.info(
-        "Find trader by Id and print out JSON field 'unusedDetails' as string: "
-            + this.traderRepository.findById("demo_trader_json3").get().getHomeAddress());
+    this.traderRepository.findById("demo_trader_json3")
+        .ifPresent(trader -> LOGGER.info(String.format("Find trader by Id and print out JSON field 'unusedDetails' as string:  %s", trader.getHomeAddress())));
 
-    LOGGER.info(
-        "Find trader by Id and print out ARRAY<JSON> field 'addressList' as string: "
-            + this.traderRepository.findById("demo_trader_json4").get().getAddressList().toString());
+    this.traderRepository.findById("demo_trader_json4")
+        .ifPresent(trader -> LOGGER.info(String.format("Find trader by Id and print out ARRAY<JSON> field 'addressList' as string: %s", trader.getAddressList())));
 
     long count = this.traderRepository.getCountActive("true");
     LOGGER.info("A query method can query on the properties of JSON values");
@@ -158,12 +175,12 @@ public class SpannerRepositoryExample {
   void createTablesIfNotExists() {
     if (!this.spannerDatabaseAdminTemplate.tableExists("trades_repository")) {
       this.spannerDatabaseAdminTemplate.executeDdlStrings(
-          Arrays.asList(this.spannerSchemaUtils.getCreateTableDdlString(Trade.class)), true);
+          List.of(this.spannerSchemaUtils.getCreateTableDdlString(Trade.class)), true);
     }
 
     if (!this.spannerDatabaseAdminTemplate.tableExists("traders_repository")) {
       this.spannerDatabaseAdminTemplate.executeDdlStrings(
-          Arrays.asList(this.spannerSchemaUtils.getCreateTableDdlString(Trader.class)), true);
+          List.of(this.spannerSchemaUtils.getCreateTableDdlString(Trader.class)), true);
     }
   }
 
